refactor: rm rebalance
